Home page mostly displaying correctly - Want to add pop out cards or wrap grid next

--- a/Components/IntroSectionPage1/IntroSection.module.css
+++ b/Components/IntroSectionPage1/IntroSection.module.css
@@ -127,5 +127,14 @@
   }
 
   .catImageContainer {
-    margin-top: 70px;
+    margin-top: 100px;
+    width: 50rem;
+    height: 50rem;
+    margin: 2rem;
+  }
+
+  .catImage {
+    height: 100%; 
+      width: 100%; 
+      object-fit: contain;
   }
