--- a/Components/ProjectSection1/ProjectSection1.module.css
+++ b/Components/ProjectSection1/ProjectSection1.module.css
@@ -1,6 +1,6 @@
 .projectGrid1 {
     position: absolute;
-    top: 1200px;
+    top: 1400px;
 }
 
 .projectTextBox{
