--- a/Components/ProjectSection2/ProjectSection2.module.css
+++ b/Components/ProjectSection2/ProjectSection2.module.css
@@ -1,6 +1,6 @@
 .projectGrid2 {
     position: absolute;
-    top: 1300px;
+    top: 1700px;
 }
 
 .projectTextBox{
