--- a/Components/ProjectSection3/ProjectSection3.module.css
+++ b/Components/ProjectSection3/ProjectSection3.module.css
@@ -1,6 +1,6 @@
 .projectGrid3 {
     position: absolute;
-    top: 1800px;
+    top: 2200px;
 }
 
 .projectTextBox{
