--- a/Components/Video/Video.module.css
+++ b/Components/Video/Video.module.css
@@ -1,6 +1,7 @@
 .videoPlayer {
     display: flex;
+    align-items: flex-start;
     margin-top: 10rem;
-    margin-left: 55rem;
+    /* margin-left: 55rem; */
         
     }
